--- a/cloud/services/pom.xml
+++ b/cloud/services/pom.xml
@@ -56,7 +56,6 @@
 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-netflix-eureka-server</artifactId>
-		    <version>1.1.6.RELEASE</version>
 		</dependency>
 	</dependencies>
 
@@ -65,7 +64,7 @@
 	        <dependency>
 			    <groupId>org.springframework.cloud</groupId>
 			    <artifactId>spring-cloud-dependencies</artifactId>
-			    <version>Brixton.RELEASE</version>
+			    <version>Finchley.M9</version>
 			    <type>pom</type>
 			    <scope>import</scope>
 			</dependency>
