--- a/cloud/config/pom.xml
+++ b/cloud/config/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>service</name>
-	<description>Demo project for Spring Cloud Eureka</description>
+	<name>config-central</name>
+	<description>Demo project for Spring Cloud Config Server</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
